--- a/styles/style.css
+++ b/styles/style.css
@@ -1,26 +1,69 @@
-body {
+*{
     box-sizing: border-box;
+}
+
+.contenedor{
+    width: 60%;
+    margin: auto;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
-    color: #3f3f3f;
+    color: #353535;
 }
 
 .header{
+    height: 30%;
+    padding: 20px;
+}
+
+.perfil{
+    float: left;
+    width: 20%;
+}
+
+.perfil_image{
     width: 100%;
-    height: auto;
-    top: 0px;
 }
 
-.perfil {
-    display: inline-block;
-    padding: 50px 50px;
+.datos{
+    float: left;
+    width: 79%;
+    padding-left: 20px;
 }
 
-.datos {
-    display: inline-block;
-    padding: 20px 20px;
+.contenido{
+    clear: both;
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 50px;
 }
 
-#header_imagen{
-    height: 25%;
+.articulo{
+    flex: 23%;
+    max-width: 23%;
+    margin: 10px;
+    background-color: #e7e7e7;
+}
+
+.articulo_image{
+    width: 100%;
+}
+
+.articulo_titulo{
+    text-align: center;
+}
+
+.footer{
+    height: 20%;
+}
+
+@media (max-width: 900px){
+    .contenedor{
+        width: 100%;
+    }
+
+    .articulo{
+        flex: 100%;
+        max-width: 100%;
+        margin: 10px;
+    } 
 }
